# syncds

./: Cargo.toml  README.md
crates/slint_3ds/: Cargo.toml
crates/slint_3ds/src/: backend.rs
crates/slint_adapter/: Cargo.toml
crates/slint_adapter/src/: backend.rs  lib.rs  pixel_format.rs
crates/syncds/: Cargo.toml  build.rs
crates/syncds/src/: main.rs
crates/syncds/ui/: test.slint
src/: main.rs
