[package]
name = "syncds"
version = "0.1.0"
edition = "2021"

[dependencies]
ctru-rs.workspace = true
slint.workspace = true
slint_adapter.workspace = true

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", branch = "master" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
